--- a/css/styles.css
+++ b/css/styles.css
@@ -242,3 +242,95 @@ p.lead.fw-normal.mt-3 {
     left: 50%;
     margin-left: -60px;
 }
+
+
+/* contact form box shadow */
+.contact-form {
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+}
+
+/* nice list stylesheet on my contact information  */  
+ol.alternating-colors li:before {
+    content: '';
+    display: block;
+    height: 42px;
+    width: 42px;
+    border-radius: 50%;
+    border: 2px solid #ddd;
+    position: absolute;
+    top: -12px;
+    left: -46px;
+}
+
+ol.alternating-colors li:nth-child(odd):before {
+    border-color: #0BAD02;
+}
+
+ol.alternating-colors li:nth-child(even):before {
+    border-color: #2378D5;
+}
+
+
+/* slide animations */
+@keyframes slideFromTop {
+    from {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideFromBottom {
+    from {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.slide-from-top {
+    animation: slideFromTop 0.5s ease-out forwards;
+}
+
+.slide-from-bottom {
+    animation: slideFromBottom 0.5s ease-out forwards;
+}
+
+@keyframes slideFromRight {
+    from {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.slide-from-right {
+    animation: slideFromRight 0.5s ease-out forwards;
+}
+
+/* img glow */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.img-fade-in {
+    animation: fadeIn 1s ease-out forwards;
+}
+
+
+
+  
